fixed input jump5

--- a/src/components/UI/FormInput/FormInput.module.css
+++ b/src/components/UI/FormInput/FormInput.module.css
@@ -3,7 +3,6 @@
     padding: 5px;
     box-sizing: border-box;
     display: block;
-    margin: 15px 0;
 }
 
 .Label {
